--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.0.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@types/react-datepicker": "^4.19.5",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "next": "14.1.0",
     "react": "^18",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-dropzone": "^14.2.3",
+    "react-paginate": "^8.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5"
   }
 }
